external-crates/move/crates/move-compiler/tests/development/typing/signed_int_struct_fields.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_struct_fields.move:4:12
  │
4 │         x: i64,
  │            ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_struct_fields.move:5:12
  │
5 │         y: i8,
  │            ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_struct_fields.move:9:16
  │
9 │         S { x: 42i64, y: 1i8 }
  │                ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_struct_fields.move:9:26
  │
9 │         S { x: 42i64, y: 1i8 }
  │                          ^^^ Signed integer types are under development
